ephy-embed-single: do not handle ephy-embed-prefs

ephy-embed-prefs acts like a singleton.

Instead of calling init and shutdown in EphyEmbedSingle instances handle
it in ephy-main as a true init/shutdown API like ephy-file-helpers.

https://bugzilla.gnome.org/show_bug.cgi?id=673273